# mlt

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build-msys2-mingw64.yml  build-windows.yml
port/: README.md  Workflow.md  install-port.bat  msvc-no-depr.cmake  portfile.cmake  test-build.bat  vcpkg.json  verify-installation.bat
port/test/: CMakeLists.txt  main.cpp
src/framework/: CMakeLists.txt  mlt_events.h  mlt_factory.c  mlt_image.h  mlt_repository.h  mlt_types.h
src/melt/: CMakeLists.txt  melt.c
src/modules/avformat/: CMakeLists.txt  consumer_avformat.c  producer_avformat.c
src/modules/core/: CMakeLists.txt
src/modules/decklink/: CMakeLists.txt  consumer_decklink.cpp
src/modules/frei0r/: CMakeLists.txt
src/modules/gdk/: CMakeLists.txt  producer_pixbuf.c
src/modules/glaxnimate/: CMakeLists.txt
src/modules/jackrack/: CMakeLists.txt
src/modules/kdenlive/: CMakeLists.txt
src/modules/movit/: CMakeLists.txt
src/modules/ndi/: CMakeLists.txt  factory.c
src/modules/normalize/: CMakeLists.txt
src/modules/oldfilm/: CMakeLists.txt
src/modules/opencv/: CMakeLists.txt
src/modules/plus/: CMakeLists.txt
src/modules/plusgpl/: CMakeLists.txt  consumer_cbrts.c
src/modules/qt/: CMakeLists.txt
src/modules/resample/: CMakeLists.txt
src/modules/rtaudio/: CMakeLists.txt
src/modules/rubberband/: CMakeLists.txt
src/modules/sdl/: CMakeLists.txt
src/modules/sdl2/: CMakeLists.txt  common.h  consumer_sdl2.c  consumer_sdl2_audio.c
src/modules/sox/: CMakeLists.txt
src/modules/spatialaudio/: CMakeLists.txt
src/modules/vid.stab/: CMakeLists.txt
src/modules/xine/: CMakeLists.txt  xineutils.h
src/modules/xml/: CMakeLists.txt
src/swig/: mlt.i
